--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,9 +2,11 @@
 
 <% if @order_items.any? %>
   <% @order_items.each do |item| %>
-    <p><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), remote: true, :method => "delete"} %></p>
-    <p> Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %></p>
-  <% end %>
+    <div id="<%= item.id %>">
+      <p><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), remote: true, :data => { :method => "delete"} %></p>
+      <p> Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %></p>
+      <% end %>
+    </div>
   <p>Your Total: <%= number_to_currency current_order.total_price %></p>
   <p><%= link_to "Finalize order", finalize_path %></p>
 <% else %>
