--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
       <h4><%= product.name %></h4>
       <p><%= product.description %></p>
       <p><%= number_to_currency product.price %></p>
-      <p><%= link_to "#{product.name} details", products_path(product) %></p>
+      <p><%= link_to "#{product.name} details", product_path(product) %></p>
 
       <%= form_for @order_item, remote: true do |f| %>
         <%= f.hidden_field :product_id, value: product.id %>
