--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,9 +2,9 @@
 
 <% if @order_items.any? %>
   <% @order_items.each do |item| %>
-  
+
     <div id="<%= item.id %>">
-      <p><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), remote: true, :data => { :method => "delete"} %></p>
+      <p><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), :data => {:method => "delete"} , remote: true %></p>
       <p> Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %></p>
       <% end %>
     </div>
