--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -3,6 +3,7 @@
   <%= form_for @product do |f| %>
     Name: <%= f.text_field :name %>
     Description: <%= f.text_field :description %>
+    Image URL: <%= f.text_field :image %>
     Price: <%= f.number_field :price %>
   <%= f.submit "Submit" %>
 
