--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
           <%= f.hidden_field :product_id, value: product.id %>
 
           <span id="<%= product.id %>"></span>
-          <%= f.number_field :quantity, placeholder: "add desired quantity" %></span>
+          <%= f.number_field :quantity, placeholder: "add desired quantity", min: 1 %></span>
           <span class="waves-effect waves-light btn"><%= f.submit "Add to cart" %>
         <% end %>
       </div>
