--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,12 +4,17 @@
   <% @order_items.each do |item| %>
 
     <div id="<%= item.id %>">
-      <p><%= item.product.name %> | <%= link_to "Delete", order_item_path(item), :data => {:method => "delete"} , remote: true %></p>
-      <p> Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %></p>
-      <% end %>
+      <p>
+        <%= item.product.name %> | <%= link_to "Delete", order_item_path(item), :data => {:method => "delete"} , remote: true %>
+      </p>
+      <p>
+        Unit Price: <%= number_to_currency item.product.price %> | Quantity: <%= item.quantity %> | Total Price: <%= number_to_currency (item.product.price * item.quantity) %>
+      </p>
     </div>
-
+  <% end %>
+<div id="total-items">
   <p>Your Total: <%= number_to_currency current_order.total_price %></p>
+</div>
   <p><%= link_to "Finalize order", finalize_path %></p>
 <% else %>
   <p>Your shopping cart is empty.</p>
