--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   <nav>
     <div class="nav-wrapper">
       <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <% if current_user.try(:admin?) %>
+          <li><%= link_to "New Product", new_product_path %></li>
+        <% end %>
         <li><%= link_to cart_path do %>
           Cart | Total items: <span id="cart-total"> <%= cart_items %></span>
           <% end %></li>
