--- a/app/views/products/show.js.erb
+++ b/app/views/products/show.js.erb
@@ -1,1 +1,1 @@
-$('#<%= @product.id %>').after("<%= j render 'products_deets' %>").remove();
+$('#<%= @product.id %>').html("<%= j render 'products_deets' %>").toggle();
