--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Update <%= @product.name %></h1>
+<%= render "layouts/errors", :object => @product %>
 
 <%= form_for @product do |f| %>
   Name: <%= f.text_field :name %>
