--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -5,7 +5,7 @@
   Name: <%= f.text_field :name %>
   Description: <%= f.text_field :description %>
   Image URL: <%= f.text_field :image %>
-  Price: <%= f.number_field :price %>
+  Price: <%= f.number_field :price, :class => 'text_field', :step => 0.01 %>
 <%= f.submit "Submit" %>
 
 <% end %>
