--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,5 +6,6 @@
   Email: <%= f.text_field :email %>
   Password: <%= f.password_field :password %>
   Password Confirmation: <%= f.password_field :password_confirmation %>
+  <%= f.hidden_field :admin, value: false %>
   <span class="waves-effect waves-light btn"><%= f.submit "Sign up" %></span>
 <% end %>
